--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: npm
-      - run: npm install --frozen-lockfile
-
+          
       - name: Build
-        run: npm docs:build
+        run: npm build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
