--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,8 @@
-{
-    "markdownlint.config": {
-        "default": true,
-        "MD033": {
-            "allowed_elements": [
-                "font",
-                "li",
-                "table",
-                "tr",
-                "td",
-                "pre",
-                "script"
-            ]
-        }
-    }
-}
+// {
+//   "markdownlint.config": {
+//     "default": true,
+//     "MD033": {
+//       "allowed_elements": ["font", "li", "table", "tr", "td", "pre", "script"]
+//     }
+//   }
+// }
