--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,55 @@
-# name 可以自定义
 name: Deploy GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+
+# 1. 设置权限：允许 GITHUB_TOKEN 写入 Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# 2. 并发控制：防止多次推送导致部署冲突
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  # 构建任务
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          persist-credentials: false
+          node-version: "20" # 建议指定 Node 版本
+          cache: "npm" # 开启缓存，加快构建速度
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Build
-        run: npm install && npm run build
+        run: npm run build
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          ACCESS_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: docs/.vitepress/dist
+          # 指向你的构建输出目录 (VitePress 默认是这个)
+          path: docs/.vitepress/dist
+
+  # 部署任务
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build # 必须等待 build 任务完成
+    steps:
+      # 4. 官方部署步骤
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
